fix collapser counters ie10

--- a/src/app/detail/styles/_detail-aside.scss
+++ b/src/app/detail/styles/_detail-aside.scss
@@ -82,6 +82,7 @@
     background: rgba(0, 0, 0, 0.2);
     padding: 0.5rem 0;
     border-radius: 10%;
+    display: block;
     /* color: black; */
     margin-left: 1rem;
     height: 2rem;
